# Also see gr's Cargo.toml file

[package]
name = "gr-sys"
version = "0.1.1"
edition = "2021"
links = "gr"
description = "Bindings to the GR C library"
readme = "../README.md"
homepage = "https://gr-framework.org"
repository = "https://github.com/rust-gr/grs.git"
license = "MIT"
keywords = ["gr", "visualization", "visualisation", "plotting", "graphics"]
categories = ["graphics", "rendering", "science", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "0.68", optional = true, default-features = false, features = ["runtime"] }
